Overlapping cover animation fix

--- a/src/components/Cover/Cover.module.css
+++ b/src/components/Cover/Cover.module.css
@@ -1,14 +1,6 @@
 .cover {
-  transition-property: top, left, right, bottom, transform;
-  transition-duration: 200ms;
-  transition-timing-function: ease-out;
   display: inherit;
   cursor: pointer;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
   box-shadow: 5px 5px 20px rgb(0 0 0 / 40%);
   opacity: 0;
 }
